Arrumando detalhes
