# microservprofessor/server/api/controllers/professores/router.ts
@@ -4,3 +4,8 @@ import controller from './professorcontroller';
 export default express
     .Router()
     .get('/', controller.all)
+    .get('/:id', controller.getById)
+    .post('/', controller.post)
+    .put('/:id', controller.update)
+    .delete('/:id', controller.delete);
+    
